* Simplified and updated code to newer conventions * Added the Annotation class to support SBO terms in Escher * Added support for GPRs and genes via the FBC package * Added the third-party library mrjtoolkitstubs-1.0.jar for support of newer versions of macOS. * Extended the list of BiGG compartments for comprehensive coverage * Fixed the bug that sometimes prevented metabolites from being linked to reactions * Fixed a bug in the graphical user interface that prevented the help icon from being shown in the tool bar * Improved user messages * Updated the project configuration in the POM file and in the .idea folder * Updated the JavaDoc